pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-293-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/293-list_items.md
---
     1. 
            [3mBlockquote[0m[3m continued here.[0m
